@@ -91,6 +91,8 @@ Ideas para background windows:
 
 -Tema solarized para ZEsarUX
 
+-Tema gui configurable todos sus elementos: fuentes, colores etc 
+
 -Osd keyboard sin multitarea en ZX81 no va fino
 
 -Ventana scanf no se deja mover bien cuando multitask off. Quizá no llama bien a handle mouse?
