@@ -486,6 +486,7 @@ entonces en el servidor, en el archivo de update de la estable, ya habré actual
 
 
 
--Tema gui configurable todos sus elementos: fuentes, colores etc 
 
 
+
+-Licencia gpl para toda mi carpeta de software propio de spectrum: sped, realdebug etc 
